--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <title>Document</title>
     <!-- Style -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Bootstrap Style -->
+    <!-- <link
+      rel="stylesheet"
+      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
+    /> -->
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -37,12 +42,16 @@
         <button id="submit-btn">إرسال</button>
       </div>
 
-      <div id="reply-content">
-        أهلا بك.. اطرح أي سؤال يدور في بالك
+      <div
+        id="reply-content"
+        class="d-flex align-items-center justify-content-center"
+      >
+        <p>أهلا بك.. اطرح أي سؤال يدور في بالك</p>
       </div>
     </div>
   </body>
   <!-- Axios CDN Script -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.4/axios.min.js"></script>
+  <!-- <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script> -->
   <script src="script.js"></script>
 </html>
